Digital clock & Base tweaks

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-a {
+.link-button {
     font-size: 2em;
     text-decoration: none;
     color: white;
@@ -6,8 +6,4 @@ a {
 
 a p {
     color: white;
-}
-
-#Links {
-    margin: 50px;
 }
