--- a/css/base.css
+++ b/css/base.css
@@ -15,7 +15,10 @@ body {
     margin-bottom: 10vh;
 }
 
-/* Classes */
+a {
+    text-decoration: none;
+}
+
 
 h1 {
     color: rgb(81, 221, 196);
@@ -26,6 +29,9 @@ h2 {
     color: rgb(214, 76, 106);
     text-shadow: 0px 0px 15px rgb(214, 76, 106);
 }
+
+/* Classes */
+
 
 .flex-container {
     display: flex;
@@ -73,4 +79,13 @@ h2 {
     width: 50%;
     height: 2px;
     background-color: white;
+}
+
+.content {
+    margin: 50px;
+}
+
+.float-right {
+    display: inline;
+    float: right;
 }
