--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,5 @@
+/* TODO: Organise this file into a set of logical sections and remove items that do not apply globaly to a websites theme or global display settings. */
+
 /* Basic properties that should be globally applied to all pages */
 :root {
     background-color: black;
@@ -131,4 +133,8 @@ h2 {
 
 .w-min-content {
     width: min-content;
+}
+
+.hidden {
+    display: none !important;
 }
