--- a/pages/Modals/Modals.css
+++ b/pages/Modals/Modals.css
@@ -1,38 +1,41 @@
-.hidden {
-    display: none !important;
-}
-
 .modal {
-    position: absolute;
+    /* Create a fullscreen box that will house the modal */
+    position: fixed;
     left: 0;
     top: 0;
 
     width: 100vw;
     height: 100vh;
 
+    /* Using flex we can ensure that we align our modal to the center of the page */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
+    /* Hide content behind the modal box */
     background-color: black;
 
+    /* Decoration and spacing*/
     border: solid white 2px;
     border-radius: 20px;
     box-shadow: 0px 0px 20px white;
     padding: 20px;
 
+    /* Relative here tells absolute children to position relative to this element instead of root */
     position: relative;
 }
 
 .modal-close-button {
-    margin: 5px;
+    /* Position in the top right relative to the parent */
     position: absolute;
     right: 0;
     top: 0;
+
+    /* Margin to move away from the edge a little and prevent other elements from being too close */
+    margin: 5px;
+
+    /* We can be clicked, give some user feedback */
     cursor: pointer;
-    border: solid white 2px;
-    font-size: 1em;
-    border-radius: 5px;
 }
